<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/main_title"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="Name: " />

            <EditText
                android:id="@+id/room_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/main_input_name"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="AppId: " />

            <EditText
                android:id="@+id/room_appid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/main_input_app_id"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="Uid: " />

            <EditText
                android:id="@+id/room_uid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/main_input_uid"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="NV21: " />

            <CheckBox
                android:id="@+id/room_enable_nv21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/main_capture_in_nv21" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="Rtmp: " />

            <CheckBox
                android:id="@+id/room_enable_cdn_streaming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/main_cdn_streaming" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/room_layout_rtmp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/room_url_name"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="Url: " />

            <EditText
                android:id="@+id/room_url_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/room_url_name"
                android:gravity="center_vertical"
                android:hint="@string/main_input_url"
                android:inputType="text" />

            <EditText
                android:id="@+id/room_url_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/room_url_edit"
                android:layout_alignLeft="@+id/room_url_edit"
                android:gravity="center_vertical"
                android:hint="@string/main_input_width"
                android:inputType="number" />

            <EditText
                android:id="@+id/room_url_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/room_url_edit"
                android:layout_toRightOf="@+id/room_url_width"
                android:gravity="center_vertical"
                android:hint="@string/main_input_height"
                android:inputType="number" />

            <EditText
                android:id="@+id/room_url_bitrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/room_url_edit"
                android:layout_toRightOf="@+id/room_url_height"
                android:gravity="center_vertical"
                android:hint="@string/main_input_bitrate"
                android:inputType="number" />

            <EditText
                android:id="@+id/room_url_fps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/room_url_edit"
                android:layout_toRightOf="@+id/room_url_bitrate"
                android:gravity="center_vertical"
                android:hint="@string/main_input_fps"
                android:inputType="number" />
        </RelativeLayout>

        <Button
            android:id="@+id/button_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:onClick="onClickJoin"
            android:text="@string/main_button" />
    </LinearLayout>
</RelativeLayout>
